index.html small changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           Logo
         </div>
         <div class="span6 blank">
-          Blank
+          __
         </div>
         <div class="span4 about">
           About
@@ -54,12 +54,12 @@
       </div>
       <div class="row heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>Eventario</h1>
         </div>
       </div> 
      <div class="row subheading">
         <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
+          <p class="lead">Your world of afterwork pleasure...</p>
         </div>
       </div>
       <div class="row pitch">
