--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,900" rel="stylesheet" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-		<script src="evelo/js/jquery.min.js"></script>
-		<script src="evelo/js/jquery.dropotron.js"></script>
-		<script src="evelo/js/config.js"></script>
-		<script src="evelo/js/skel.min.js"></script>
-		<script src="evelo/js/skel-panels.min.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.dropotron.js"></script>
+		<script src="js/config.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-panels.min.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="evelo/css/skel-noscript.css" />
-			<link rel="stylesheet" href="evelo/css/style.css" />
-			<link rel="stylesheet" href="evelo/css/style-desktop.css" />
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 	</head>
 
